# claude-prolog

./: .gitignore  README.md  bank_loan_rules.pro  loan_scenario.txt  pyproject.toml
prolog_agent/: __init__.py  main.py  prolog_mcp_server.py  stream_patch.py
