[project]
name = "claude-prolog-agent"
version = "0.1.0"
description = "Autonomous Claude agent with Scryer Prolog logical reasoning"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.13",
    "anyio>=4.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "mcp>=1.10.1",
    "fastmcp>=2.9.1",
]

[project.scripts]
prolog-agent = "prolog_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prolog_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
] 
